--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,1 +1,6 @@
-[]
+-   action_name: save
+    args: null
+    created: 1530679326
+    eco: null
+    guid: 8671d936-a321-4856-b921-aa71d6f464a9
+    state: running
